# gnuradio

./: .clang-format  .clang-tidy  .cmake-format.py  .conda-forge.yml  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .readthedocs.yaml  .zenodo.json  AUTHORS  CHANGELOG.md  CMakeGraphvizOptions.cmake  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYING  ChangeLog  Guile-TODO  INSTALL  Makefile.am  Makefile.common  Makefile.common.spu  Makefile.gen.gen  Makefile.in  Makefile.par.gen  Makefile.swig  Makefile.swig.gen.t  NEWS  README  README-win32-mingw-short.txt  README.building-boost  README.components  README.hacking  README.md  README.organization  README.ps3  RELEASE-NOTES.md  TODO.build  VERSIONING  (+21 more)
bench/: bm_buffer.cpp  bm_copy.cc  bm_fanout.cc  bm_msg_forward.cc  bm_nop.cc  meson.build
bench/cuda/: bm_copy.cc  meson.build
blocklib/: README.md  meson.build
blocklib/analog/: .gitignore  enums.yml
blocklib/fec/: meson.build
blocklib/pdu/: .gitignore
blocklib/soapy/: .gitignore
config/: .gitignore  Makefile.am  Makefile.in  acx_cblas.m4  ax_boost_asio.m4  ax_boost_base.m4  ax_boost_python.m4  ax_boost_regex.m4  ax_boost_signals.m4  ax_boost_thread.m4  ax_boost_wserialization.m4  gr_as.m4  gr_atsc.m4  gr_audio_alsa.m4  gr_audio_jack.m4  gr_audio_oss.m4  gr_audio_osx.m4  gr_audio_portaudio.m4  gr_audio_windows.m4  gr_boost.m4  gr_check_createfilemapping.m4  gr_check_mc4020.m4  gr_check_memalign.m4  gr_check_shm_open.m4  gr_comedi.m4  gr_doxygen.m4  gr_error_correcting_codes.m4  gr_fortran.m4  gr_gcell.m4  gr_git.m4  gr_gnuradio_core.m4  gr_gnuradio_examples.m4  gr_gprof.m4  gr_gsm_fr_vocoder.m4  gr_guile.m4  gr_lib64.m4  gr_libgnuradio_core_extra_ldflags.m4  gr_no_undefined.m4  gr_omnithread.m4  gr_pmt.m4  (+84 more)
docs/: CMakeLists.txt  ChangeLog  Doxyfile.in  Makefile  Makefile.am  Makefile.in  PYBIND11.md  README.md  RELEASE-NOTES-3.7.10.1.md  RELEASE-NOTES-3.7.10.2.md  RELEASE-NOTES-3.7.10.md  RELEASE-NOTES-3.7.11.md  RELEASE-NOTES-3.7.9.1.md  RELEASE-NOTES-3.7.9.2.md  RELEASE-NOTES-3.7.9.3.md  meson.build
docs/doxygen/: .gitignore  CMakeLists.txt  Doxyfile.in  Doxyfile.swig_doc.in  Makefile.am  Makefile.in  README.doxyxml  meson.build  pydoc_macros.h  swig_doc.py  update_pydoc.py
docs/exploring-gnuradio/: .gitignore  CMakeLists.txt  Makefile  dial_tone.py  dial_tone_example.xml  exploring-gnuradio.xml  exploring_gnuradio.dox  fm_demod.py  fm_demod_example.xml  fm_rx.grc  fm_tx.grc  swr-block-diagram.eps  usrp-block-diagram.eps
docs/howto-write-a-block/: .gitignore  Makefile.am  README  howto_1.i  make_numbered_listing.py  src_lib_Makefile_1.am  src_lib_Makefile_2.am
docs/man/: CMakeLists.txt  dial_tone.1.in  display_qt.1.in  gnuradio-companion.1.in  gnuradio-config-info.1.in  gr-ctrlport-monitor.1.in  gr_filter_design.1.in  gr_modtool.1.in  gr_plot_const.1.in  gr_plot_fft.1.in  gr_plot_iq.1.in  gr_plot_psd.1.in  gr_plot_qt.1.in  gr_plot_time.1.in  gr_read_file_metadata.1.in  grcc.1.in  polar_channel_construction.1.in  tags_demo.1.in  uhd_fft.1.in  uhd_rx_cfile.1.in  uhd_rx_nogui.1.in  uhd_siggen.1.in  uhd_siggen_gui.1.in
docs/source/: conf.py  conf.py.in  doc_tools.py  group_defs.dox  index.rst
docs/sphinx/: .gitignore  CMakeLists.txt  Makefile  README  conf.py  doc_tools.py  environment.yml  gnuradio_sphinx.py  hash_fix.py  index.rst  license.rst  pyproject.toml  run_sphinx_build.sh.in
docs/tutorials/: porting_history_block.md
docs/usage-manual/: (exported from wiki) Block Thread Affinity and Priority.txt  (exported from wiki) Configuration Files.txt  (exported from wiki) GNURadioCompanion.txt  (exported from wiki) Handling Flowgraphs.txt  (exported from wiki) Logging.txt  (exported from wiki) Message Passing.txt  (exported from wiki) Metadata Information.txt  (exported from wiki) Performance Counters.txt  (exported from wiki) Polymorphic Types (PMTs).txt  (exported from wiki) Polyphase Filterbanks.txt  (exported from wiki) QT GUI.txt  (exported from wiki) Stream Tags.txt  COPYING  README.md  (+4 more)
gnuradio-core/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  NEWS  README  THANKS  TODO  ctrlport.conf.example  gnuradio-core.conf  gnuradio-core.conf.in  gnuradio-core.pc.in  gr_log_default.conf  gr_log_default.xml
gnuradio-examples/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.hacking
gnuradio-runtime/: CMakeLists.txt  ConfigChecks.cmake  ctrlport.conf.example  ctrlport.conf.in  gnuradio-runtime.conf.in  gnuradio-runtime.pc.in  gr_log_default.conf
gr-analog/: CMakeLists.txt  README  gnuradio-analog.pc.in
gr-atsc/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  README.signal_flow  gnuradio-atsc.pc  gnuradio-atsc.pc.in
gr-audio/: CMakeLists.txt  Makefile.am  Makefile.in  README  gnuradio-audio.pc  gnuradio-audio.pc.in
gr-basic/: CMakeLists.txt  gnuradio-basic.pc.in
gr-blocks/: CMakeLists.txt  gnuradio-blocks.pc.in
gr-channels/: CMakeLists.txt  gnuradio-channels.pc.in
gr-comedi/: CMakeLists.txt  ChangeLog  Makefile.am  Makefile.in  README  gnuradio-comedi.pc  gnuradio-comedi.pc.in
gr-digital/: .gitignore  CMakeLists.txt  Makefile.am  README  digital_gmskmod_bc.xml  gnuradio-digital.pc.in
gr-dtv/: CMakeLists.txt  gnuradio-dtv.pc.in
gr-fcd/: .gitignore  AUTHORS  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.common  Makefile.swig  Makefile.swig.gen.t  NEWS  README  README.hacking  bootstrap  configure.ac  gnuradio-fcd.pc.in  version.sh
gr-fec/: CMakeLists.txt  gnuradio-fec.pc.in
gr-fft/: CMakeLists.txt  gnuradio-fft.pc.in
gr-filter/: CMakeLists.txt  gnuradio-filter.pc.in
gr-howto-write-a-block/: .gitignore  CMakeLists.txt  ChangeLog  Makefile.am  Makefile.common  Makefile.swig  Makefile.swig.gen.t  README  README.hacking  bootstrap  config.guess  config.sub  configure.ac  depcomp  ltmain.sh  py-compile  setup_guile_test_env.in  version.sh
gr-howto-write-a-block-cmake/: CMakeLists.txt
gr-iio/: CMakeLists.txt  gnuradio-iio.pc.in
gr-linux-crypto/: .cursorrules  CMakeLists.txt  README.md  build.sh  requirements.txt  setup.py
(+22019 files in other folders)
